--- a/index.html
+++ b/index.html
@@ -12,6 +12,44 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="icon" href="iwlogo.png" type="image/gif" sizes="20x20">
 <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"> -->
+	 
+	
+	 <meta name="description" content="IWSC SRM" />
+    <meta name="keywords" content="IWSC SRM" />
+    <meta name="author" content="IWSC" />
+    <meta property="og:title" content="IWSC-SRM" />
+    <meta property="og:description" content="A team of budding developers working to develop resourceful applications." />
+    <meta property="og:image" content="https://billboard.srmkzilla.net/api/blog?title=IWSC-SRM&subtitle=IWSC%202021&theme=dark" />
+	<!-- Start of Async Drift Code -->
+    <script>
+        "use strict";
+
+        ! function() {
+            var t = window.driftt = window.drift = window.driftt || [];
+            if (!t.init) {
+                if (t.invoked) return void(window.console && console.error && console.error("Drift snippet included twice."));
+                t.invoked = !0, t.methods = ["identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on"],
+                    t.factory = function(e) {
+                        return function() {
+                            var n = Array.prototype.slice.call(arguments);
+                            return n.unshift(e), t.push(n), t;
+                        };
+                    }, t.methods.forEach(function(e) {
+                        t[e] = t.factory(e);
+                    }), t.load = function(t) {
+                        var e = 3e5,
+                            n = Math.ceil(new Date() / e) * e,
+                            o = document.createElement("script");
+                        o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+                        var i = document.getElementsByTagName("script")[0];
+                        i.parentNode.insertBefore(o, i);
+                    };
+            }
+        }();
+        drift.SNIPPET_VERSION = '0.3.1';
+        drift.load('sxapv4bvcw45');
+    </script>
+    <!-- End of Async Drift Code -->
 </head>
 <body>
     <div class="back">
